--- a/vc7/Sonix/OpenAL/OpenAL.vcproj
+++ b/vc7/Sonix/OpenAL/OpenAL.vcproj
@@ -20,7 +20,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="&quot;$(OPENAL_ROOT)\include&quot;;&quot;$(NSPR_ROOT)\include&quot;;&quot;$(BOOST_INCLUDES)&quot;;&quot;$(CPPDOM_ROOT)\include&quot;;&quot;$(GMTL_ROOT)\include&quot;;..;..\..\..\modules\vapor;..\..\VPR;..\..\..\modules\sonix;..\..\..\modules\sonix\plugins"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;_SNX_PLUGIN_BUILD_;NO_SELF_REGISTER"
+				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_USRDLL;_SNX_PLUGIN_BUILD_;NO_SELF_REGISTER"
 				MinimalRebuild="FALSE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -41,7 +41,7 @@
 				AdditionalLibraryDirectories="&quot;$(OPENAL_ROOT)\libs&quot;;&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(BOOST_ROOT)\lib&quot;;&quot;$(CPPDOM_ROOT)\lib\DebugDLL&quot;;..\DebugDLL;..\..\Sonix\DebugDLL;..\..\VPR\DebugDLL"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile="$(OutDir)/OpenALPlugin.pdb"
-				SubSystem="2"
+				SubSystem="1"
 				ImportLibrary="$(OutDir)/OpenALPlugin.lib"
 				TargetMachine="1"/>
 			<Tool
@@ -71,7 +71,7 @@
 				InlineFunctionExpansion="1"
 				OmitFramePointers="TRUE"
 				AdditionalIncludeDirectories="&quot;$(OPENAL_ROOT)\include&quot;;&quot;$(NSPR_ROOT)\include&quot;;&quot;$(BOOST_INCLUDES)&quot;;&quot;$(CPPDOM_ROOT)\include&quot;;&quot;$(GMTL_ROOT)\include&quot;;..;..\..\..\modules\vapor;..\..\VPR;..\..\..\modules\sonix;..\..\..\modules\sonix\plugins"
-				PreprocessorDefinitions="WIN32;_OPT;NDEBUG;_WINDOWS;_USRDLL;_SNX_PLUGIN_BUILD_;NO_SELF_REGISTER"
+				PreprocessorDefinitions="WIN32;_OPT;NDEBUG;_CONSOLE;_USRDLL;_SNX_PLUGIN_BUILD_;NO_SELF_REGISTER"
 				StringPooling="TRUE"
 				MinimalRebuild="FALSE"
 				RuntimeLibrary="2"
@@ -93,7 +93,7 @@
 				AdditionalLibraryDirectories="&quot;$(OPENAL_ROOT)\libs&quot;;&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(BOOST_ROOT)\lib&quot;;&quot;$(CPPDOM_ROOT)\lib\ReleaseDLL&quot;;..\ReleaseDLL;..\..\Sonix\ReleaseDLL;..\..\VPR\ReleaseDLL"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile="$(OutDir)/OpenALPlugin.pdb"
-				SubSystem="2"
+				SubSystem="1"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				ImportLibrary="$(OutDir)/OpenALPlugin.lib"
