Remove an unneeded .lib input file in the linker settings.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@15177 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/PyJuggler/vc7/gadget/gadget.vcproj
+++ b/PyJuggler/vc7/gadget/gadget.vcproj
@@ -39,7 +39,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="gadget_d.lib jccl_d.lib vpr_d.lib cppdom_d.lib libnspr4.lib python$(PYTHON_VERSION).lib boost_python-vc71-mt-gd-1_31.lib $(NOINHERIT)"
+				AdditionalDependencies="gadget_d.lib jccl_d.lib vpr_d.lib cppdom_d.lib libnspr4.lib boost_python-vc71-mt-gd-1_31.lib $(NOINHERIT)"
 				OutputFile="$(OutDir)/gadget_d.pyd"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
@@ -99,7 +99,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="gadget.lib jccl.lib vpr.lib cppdom.lib libnspr4.lib python$(PYTHON_VERSION).lib boost_python-vc71-mt-1_31.lib $(NOINHERIT)"
+				AdditionalDependencies="gadget.lib jccl.lib vpr.lib cppdom.lib libnspr4.lib boost_python-vc71-mt-1_31.lib $(NOINHERIT)"
 				OutputFile="$(OutDir)/gadget.pyd"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
