Bug fixed:	The include path for the OSG headers was not included 		among the compiler arguments.
This reason that this did not present a problem before is because I
always tested with OSG installed in /usr/local, and on some Linux
distributions, /usr/local/include is in the default header search path.


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@15200 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/PyJuggler/src/common-targets.mk.in
+++ b/PyJuggler/src/common-targets.mk.in
@@ -55,8 +55,7 @@ else
    MODEXT_OPT=	
 endif
 
-CXXFLAGS+=	@PYTHON_INCLUDES@ -I$(top_srcdir) -I$(top_srcdir)/src	\
-		-I$(srcdir) $(DEFS)
+CXXFLAGS+=	@PYTHON_INCLUDES@ $(INCLUDES) $(DEFS)
 CXX_PLUGIN=	@CXX_PLUGIN@
 #DEFS=		@DEFS@
 INCLUDES=	-I$(top_srcdir) -I$(top_srcdir)/src -I$(srcdir)		\
