--- a/PyJuggler/Makefile.in
+++ b/PyJuggler/Makefile.in
@@ -65,6 +65,7 @@ install:
 	$(PERL) $(scriptdir)/install-dir.pl -o $(projdatadir)/examples	\
           -i $(top_srcdir)/examples -v "$(topdir)/VARS.pl"
 	-chmod $(EXEC_PERMS) $(projdatadir)/examples/python/simpleGL/simpleGL.py
+	-chmod $(EXEC_PERMS) $(projdatadir)/examples/python/pyosgnav/pyosgnav.py
 
 cleandepend:
 	$(MAKE) DO_CLEANDEPEND=1 RECTARGET="$@" recursive
