Exposed VPR's most basic serializable object classes for use with Python.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@15254 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/PyJuggler/src/vpr/Makefile.in
+++ b/PyJuggler/src/vpr/Makefile.in
@@ -31,13 +31,18 @@ VPR_LIBS=	$(shell vpr-config --libs)
 VPR_EXTRA_LIBS=	$(shell vpr-config --extra-libs)
 
 EXTRA_CXXFLAGS=	$(shell vpr-config --cxxflags)
-EXTRA_LDFLAGS=	$(VPR_LIBS) $(VPR_EXTRA_LIBS)
+EXTRA_LDFLAGS=	$(PYJUTIL_LIB) $(VPR_LIBS) $(VPR_EXTRA_LIBS)
 MOD_NAME=	vpr
 
 SRCS= \
 	_GUID.cpp		\
 	_Interval.cpp		\
+	_ObjectReader.cpp	\
+	_ObjectWriter.cpp	\
+	_ReadableObject.cpp	\
 	_ReturnStatus.cpp	\
+	_SerializableObject.cpp	\
+	_WriteableObject.cpp	\
 	vpr.cpp
 
 include ../common-targets.mk
