Added the Open Threads library to the list of OSG libraries needed for linking an application.  With the CVS version of OSG, applications do not link correctly (on Linux at least) without this option.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@15266 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vrjuggler/configure.in
+++ b/juggler/modules/vrjuggler/configure.in
@@ -425,7 +425,7 @@ if test "$OS_TYPE" = "UNIX" ; then
         APP_EXTRA_LIBS_X11="$X_LDFLAGS -lX11"
     fi
 
-    APP_EXTRA_LIBS_OSG='-L$(OSGHOME)/lib -losg -losgDB -losgGA -losgUtil'
+    APP_EXTRA_LIBS_OSG='-L$(OSGHOME)/lib -losg -losgDB -losgGA -losgUtil -lOpenThreads'
 
     if test "x$OGL_LDFLAGS" != "x" ; then
         if test "x$PLATFORM" = "xDarwin" ; then
