Ensure that vpr::TSObjectBase is compiled into the vpr library.  Little things like this make a huge difference in getting RTTI to work correctly in some cases.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@15269 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vapor/vpr/Thread/Makefile.in
+++ b/juggler/modules/vapor/vpr/Thread/Makefile.in
@@ -61,6 +61,7 @@ SRCS		= BaseThread.cpp	\
                   ThreadFunctor.cpp	\
                   ThreadManager.cpp	\
                   ThreadPool.cpp        \
+                  TSObject.cpp		\
                   TSObjectProxy.cpp
 
 include $(MKPATH)/dpp.obj.mk
