--- a/modules/vapor/vpr/Thread/Makefile.in
+++ b/modules/vapor/vpr/Thread/Makefile.in
@@ -61,6 +61,7 @@ SRCS		= BaseThread.cpp	\
                   ThreadFunctor.cpp	\
                   ThreadManager.cpp	\
                   ThreadPool.cpp        \
+                  TSObject.cpp		\
                   TSObjectProxy.cpp
 
 include $(MKPATH)/dpp.obj.mk
