--- a/juggler/vc7/VPR/VPR.vcproj
+++ b/juggler/vc7/VPR/VPR.vcproj
@@ -37,7 +37,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="libboost_filesystem-$(BOOST_TOOL)-mt-gd-$(BOOST_VERSION).lib cppdom_d.lib libnspr4.lib libplc4.lib ws2_32.lib rpcrt4.lib $(NOINHERIT)"
 				OutputFile="$(OutDir)/vpr_d.dll"
-				Version="0.36.1"
+				Version="0.36.3"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="&quot;$(BOOST_ROOT)\lib&quot;;&quot;$(CPPDOM_ROOT)\lib&quot;;&quot;$(NSPR_ROOT)\lib&quot;"
 				ModuleDefinitionFile=""
@@ -90,7 +90,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="libboost_filesystem-$(BOOST_TOOL)-mt-$(BOOST_VERSION).lib cppdom.lib libnspr4.lib libplc4.lib ws2_32.lib rpcrt4.lib $(NOINHERIT)"
 				OutputFile="$(OutDir)/vpr.dll"
-				Version="0.35.2"
+				Version="0.36.3"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="&quot;$(BOOST_ROOT)\lib&quot;;&quot;$(CPPDOM_ROOT)\lib&quot;;&quot;$(NSPR_ROOT)\lib&quot;"
 				ModuleDefinitionFile=""
@@ -212,6 +212,9 @@
 			</File>
 			<File
 				RelativePath="..\..\modules\vapor\vpr\SystemBase.cpp">
+			</File>
+			<File
+				RelativePath="..\..\modules\vapor\vpr\Thread\TSObject.cpp">
 			</File>
 			<File
 				RelativePath="..\..\modules\vapor\vpr\Thread\TSObjectProxy.cpp">
