New feature: Custom editors are now installed in ${VJ_BASE_DIR}/lib/vrjuggler              instead of ${VJ_BASE_DIR}/bin
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@15290 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vrjuggler/vrjconfig/build.xml.in
+++ b/juggler/modules/vrjuggler/vrjconfig/build.xml.in
@@ -49,6 +49,7 @@
          <include name="org/vrjuggler/vrjconfig/wizard/cluster/**" />
          <fileset dir="${srcdir}">
             <include name="org/vrjuggler/vrjconfig/wizard/cluster/images/*" />
+            <include name="org/vrjuggler/vrjconfig/wizard/cluster/Wizard.xml" />
          </fileset>
       </jar>
       <jar destfile="Devices.jar" basedir=".">
