--- a/juggler/modules/vrjuggler/vrjconfig/customeditors/intersense/Makefile.in
+++ b/juggler/modules/vrjuggler/vrjconfig/customeditors/intersense/Makefile.in
@@ -41,7 +41,9 @@ default: all
 # Include common definitions.
 include @topdir@/make.defs.mk
 
-beandir=		$(bindir)/beans
+beandir=		$(libdir)/vrjuggler/customeditors
+jardir=			$(libdir)/vrjuggler/customeditors
+
 srcdir=			@srcdir@
 top_srcdir=		@top_srcdir@
 EXTRA_SRCS_PATH=	$(srcdir)/../tweek/idl
@@ -86,21 +88,15 @@ install-editor:
 	@echo "------------------------------------------------"
 	@echo "Installing the IntersenseEditor code base"
 	@echo "------------------------------------------------"
-#ifeq (@OS_TYPE@, UNIX)
-#	$(INSTALL) -m $(EXEC_PERMS) $(GROUP_OPT_UNIX)			\
-#          $(EXTRA_INSTALL_ARGS) $(VJROOT_ABS)/vrjconfig/customeditors/proxyeditor/proxyeditor.sh \
-#          $(bindir)/proxyeditor
-#else
-#	$(INSTALL) -m $(EXEC_PERMS) $(GROUP_OPT_UNIX)			\
-#          $(VJROOT_ABS)/vrjconfig/customeditors/proxyeditor/proxyeditor.bat $(bindir)/proxyeditor.bat
-#endif	# if OS_TYPE == UNIX
+	$(MKINSTALLDIRS) $(beandir)
+	$(MKINSTALLDIRS) $(jardir)
 ifneq ($(JARS), )
 	for jar in $(JARS) ;						\
           do								\
               $(INSTALL) -m $(FILE_PERMS) $(GROUP_OPT_UNIX)		\
                 $(EXTRA_INSTALL_ARGS)
 		$(topdir)/vrjconfig/customeditors/intersense/$$jar		\
-                $(bindir) || exit 1;					\
+                $(jardir) || exit 1;					\
           done
 endif
 ifneq ($(BEANS), )
@@ -114,11 +110,6 @@ ifneq ($(BEANS), )
                 $(top_srcdir)/vrjconfig/customeditors/intersense/$$bean.xml $(beandir) || exit 1; \
           done
 endif
-	for jar in `echo "$(JGRAPH_JARS)" | sed -e 's/$(JCPS)/ /g'` ;	\
-          do								\
-              $(INSTALL) $(EXTRA_INSTALL_ARGS) -m $(FILE_PERMS)		\
-                $(GROUP_OPT_UNIX) $$jar $(bindir) ;			\
-          done
 	  
 install-docs:
 	$(MKINSTALLDIRS) $(doc_prefix)
