--- a/vc7/VRJuggler/OpenGL_Draw_Manager/OpenGL_Draw_Manager.vcproj
+++ b/vc7/VRJuggler/OpenGL_Draw_Manager/OpenGL_Draw_Manager.vcproj
@@ -121,6 +121,9 @@
 			Name="Source Files"
 			Filter="cpp;c;cxx;def;odl;idl;hpj;bat;asm">
 			<File
+				RelativePath="..\..\..\modules\vrjuggler\vrj\Draw\OGL\GlApp.cpp">
+			</File>
+			<File
 				RelativePath="..\..\..\modules\vrjuggler\vrj\Draw\OGL\GlBasicSimulator.cpp">
 			</File>
 			<File
