--- a/juggler/modules/vrjuggler/vrjconfig/customeditors/pinchglove/Makefile.inc.in
+++ b/juggler/modules/vrjuggler/vrjconfig/customeditors/pinchglove/Makefile.inc.in
@@ -30,46 +30,20 @@
 #
 # *************** <auto-copyright.pl END do not edit this line> ***************
 
-# -----------------------------------------------------------------------------
-# Makefile.in for vrjuggler/vrjconfig/customeditors.  It requires GNU make.
-#
-# Generated for use on @PLATFORM@
-# -----------------------------------------------------------------------------
-
-# Include common definitions.
-include @topdir@/make.defs.mk
-
-# Prefix for recursive stuff.
-DIRPRFX=	vrjconfig/customeditors/
-
-BUILD_JAVA=		@BUILD_JAVA@
-BUILD_PROXY_EDITOR=	@BUILD_PROXY_EDITOR@
-BUILD_JAVA3D_EDITOR=	@BUILD_JAVA_3D_EDITOR@
-
-# Subdirectories used for recursion through the source tree.
-SUBDIR= #displaywindoweditor 
-
-ifeq ($(BUILD_JAVA), Y)
-   ifeq ($(BUILD_PROXY_EDITOR), Y)
-      SUBDIR+=	proxyeditor
-   endif
-   SUBDIR+= intersense
-   SUBDIR+= pinchglove
+ifndef NO_JAVA
+   BUILD_JAVA=	@BUILD_JAVA@
+else
+   BUILD_JAVA=	N
 endif
 
-# Subdirectories to compile.
+pinchglove-java:
 ifeq ($(BUILD_JAVA), Y)
-   ifeq ($(BUILD_JAVA3D_EDITOR), Y)
-      SUBDIR+=	surfacedisplayeditor
-   endif
+	@echo "------------------------------------------------"
+	@echo "Building code for the PinchGloveEditor"
+	@echo "------------------------------------------------"
+	@$(MAKE) java
+else
+	@echo "------------------------------------------------"
+	@echo "PinchGloveEditor build skipped"
+	@echo "------------------------------------------------"
 endif
-
-$(RECTARGET): recursive
-
-customeditors:
-	$(MAKE) RECTARGET=build-editor recursive
-
-install-customeditors:
-	$(MAKE) RECTARGET=install-editor recursive
-
-include $(MKPATH)/dpp.subdir.mk
