Added files missing from AC_CONFIG_FILES() in an effort to fix the build.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@15308 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vrjuggler/configure.in
+++ b/juggler/modules/vrjuggler/configure.in
@@ -663,6 +663,9 @@ AC_CONFIG_FILES([
    vrjconfig/customeditors/intersense/build.xml
    vrjconfig/customeditors/intersense/Makefile
    vrjconfig/customeditors/intersense/Makefile.inc
+   vrjconfig/customeditors/pinchglove/build.xml
+   vrjconfig/customeditors/pinchglove/Makefile
+   vrjconfig/customeditors/pinchglove/Makefile.inc
    vrjconfig/customeditors/proxyeditor/build.xml
    vrjconfig/customeditors/proxyeditor/Makefile
    vrjconfig/customeditors/proxyeditor/Makefile.inc
