--- a/modules/vrjuggler/samples/Pf/advanced/pfNav/pfNav.vcproj
+++ b/modules/vrjuggler/samples/Pf/advanced/pfNav/pfNav.vcproj
@@ -46,7 +46,7 @@
 				OutputFile="$(OutDir)/pfNav.exe"
 				LinkIncremental="2"
 				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories="&quot;$(VJ_DEPS_DIR)\lib&quot;;&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(VJ_BASE_DIR)\lib&quot;;&quot;$(PFROOT)\lib\Debug&quot;"
+				AdditionalLibraryDirectories="&quot;$(VJ_DEPS_DIR)\lib&quot;;&quot;$(VJ_BASE_DIR)\lib&quot;;&quot;$(PFROOT)\lib\Debug&quot;"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile="$(OutDir)/pfNav.pdb"
 				SubSystem="1"
@@ -106,7 +106,7 @@
 				OutputFile="$(OutDir)/pfNav.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories="&quot;$(VJ_DEPS_DIR)\lib&quot;;&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(VJ_BASE_DIR)\lib&quot;;&quot;$(PFROOT)\lib&quot;"
+				AdditionalLibraryDirectories="&quot;$(VJ_DEPS_DIR)\lib&quot;;&quot;$(VJ_BASE_DIR)\lib&quot;;&quot;$(PFROOT)\lib&quot;"
 				ProgramDatabaseFile="$(OutDir)/pfNav.pdb"
 				SubSystem="1"
 				TargetMachine="1"/>
