--- a/modules/vrjuggler/samples/sound/simple/sonix/sonixApp.vcproj
+++ b/modules/vrjuggler/samples/sound/simple/sonix/sonixApp.vcproj
@@ -106,7 +106,7 @@
 				OutputFile="$(OutDir)/snxExample.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories="&quot;$(VJ_DEPS_DIR)\lib&quot;;&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(VJ_BASE_DIR)\lib&quot;"
+				AdditionalLibraryDirectories="&quot;$(VJ_DEPS_DIR)\lib&quot;;&quot;$(VJ_BASE_DIR)\lib&quot;"
 				ProgramDatabaseFile="$(OutDir)/snxExample.pdb"
 				SubSystem="1"
 				TargetMachine="1"/>
