--- a/juggler/modules/vrjuggler/samples/OGL/ext/proceduralApp/proceduralApp.vcproj
+++ b/juggler/modules/vrjuggler/samples/OGL/ext/proceduralApp/proceduralApp.vcproj
@@ -46,7 +46,7 @@
 				OutputFile="$(OutDir)/procApp.exe"
 				LinkIncremental="2"
 				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories="&quot;$(VJ_DEPS_DIR)\lib&quot;;&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(VJ_BASE_DIR)\lib&quot;"
+				AdditionalLibraryDirectories="&quot;$(VJ_DEPS_DIR)\lib&quot;;&quot;$(VJ_BASE_DIR)\lib&quot;"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile="$(OutDir)/procApp.pdb"
 				SubSystem="1"
@@ -105,7 +105,7 @@
 				OutputFile="$(OutDir)/procApp.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories="&quot;$(VJ_DEPS_DIR)\lib&quot;;&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(VJ_BASE_DIR)\lib&quot;"
+				AdditionalLibraryDirectories="&quot;$(VJ_DEPS_DIR)\lib&quot;;&quot;$(VJ_BASE_DIR)\lib&quot;"
 				ProgramDatabaseFile="$(OutDir)/procApp.pdb"
 				SubSystem="1"
 				TargetMachine="1"/>
