--- a/juggler/modules/vrjuggler/samples/OpenSG/simple/OpenSGNav/OpenSGNav.vcproj
+++ b/juggler/modules/vrjuggler/samples/OpenSG/simple/OpenSGNav/OpenSGNav.vcproj
@@ -47,7 +47,7 @@
 				OutputFile="$(OutDir)/OpenSGNav.exe"
 				LinkIncremental="2"
 				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories="&quot;$(OSGROOT)\lib&quot;;&quot;$(VJ_DEPS_DIR)\lib&quot;;&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(VJ_BASE_DIR)\lib&quot;"
+				AdditionalLibraryDirectories="&quot;$(OSGROOT)\lib&quot;;&quot;$(VJ_DEPS_DIR)\lib&quot;;&quot;$(VJ_BASE_DIR)\lib&quot;"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile="$(OutDir)/OpenSGNav.pdb"
 				SubSystem="1"
@@ -108,7 +108,7 @@
 				OutputFile="$(OutDir)/OpenSGNav.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories="&quot;$(OSGROOT)\lib&quot;;&quot;$(VJ_DEPS_DIR)\lib&quot;;&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(VJ_BASE_DIR)\lib&quot;"
+				AdditionalLibraryDirectories="&quot;$(OSGROOT)\lib&quot;;&quot;$(VJ_DEPS_DIR)\lib&quot;;&quot;$(VJ_BASE_DIR)\lib&quot;"
 				ProgramDatabaseFile="$(OutDir)/OpenSGNav.pdb"
 				SubSystem="1"
 				TargetMachine="1"/>
