Added the new PinchGlove custom editor to the mix.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@15314 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/vc7/VRJConfig/Makefile
+++ b/juggler/vc7/VRJConfig/Makefile
@@ -37,11 +37,13 @@ all: java
 java:
 	$(ANT)
 	$(ANT) -f build-intersense.xml
+	$(ANT) -f build-pinchglove.xml
 	$(ANT) -f build-proxyeditor.xml
 	-$(ANT) -f build-surfacedisplayeditor.xml
 
 clean:
 	$(ANT) clean
 	$(ANT) -f build-intersense.xml clean
+	$(ANT) -f build-pinchglove.xml clean
 	$(ANT) -f build-proxyeditor.xml clean
 	$(ANT) -f build-surfacedisplayeditor.xml clean
