Just as was done with vrj::GlApp, ensure that vrj::PfApp is compiled into the vrj_pf library properly.  While I don't expect there to be any multi-language bindings for Performer-based VR Juggler applications, we should still be sure to compile things correctly.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@15340 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vrjuggler/vrj/Draw/Pf/Makefile.in
+++ b/juggler/modules/vrjuggler/vrj/Draw/Pf/Makefile.in
@@ -47,9 +47,10 @@ top_srcdir=	@top_srcdir@
 INSTALL=	@INSTALL@
 SUBOBJDIR=	$(PF_LIBRARY)
 
-SRCS=		PfDrawManager.cpp	     \
-		PfUtil.cpp		     \
-		PfBasicSimulator.cpp	     \
+SRCS=		PfApp.cpp			\
+		PfDrawManager.cpp		\
+		PfUtil.cpp			\
+		PfBasicSimulator.cpp		\
 		PfSimInterfaceFactory.cpp
 
 include $(MKPATH)/dpp.obj.mk
