Added the JCCL Java API reference documentation into the mix.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk/juggler@15344 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/Makefile.docs
+++ b/Makefile.docs
@@ -66,6 +66,7 @@ all:
             $(MAKE) -C $$dir docs || exit 1;	\
           done
 	$(MAKE) -C modules/tweek/java -f Makefile.docs docs
+	$(MAKE) -C modules/jackal -f Makefile.docs docs
 
 install:
 	for dir in $(SUBDIR) ; do					\
